--- a/challenges/mihai-challenge/ctfs/challenge-10/config.json
+++ b/challenges/mihai-challenge/ctfs/challenge-10/config.json
@@ -1,5 +1,5 @@
 {
-  "id": "cti-final-10",
+  "id": "challenge-10",
   "title": "The Full Investigation",
   "description": "You've received an anonymous tip about a suspicious domain: 'https://kmcc-uk.org/'. Step 1: Use WHOIS to find the registrar name. Step 2: Use DNS lookup to find the first A record (first IPv4 address). Step 3: Use IP geolocation to find the country code. Combine them in format: REGISTRAR_IP_COUNTRY (all uppercase, use first word of registrar only).",
   "points": 300,
