--- a/challenges/shawn-challenge/ctfs/challenge-7/config.json
+++ b/challenges/shawn-challenge/ctfs/challenge-7/config.json
@@ -1,5 +1,5 @@
 {
-"id": "OSINT-07", 
+"id": "challenge-7", 
 "title": "Github Forensics", 
 "description": "A client has requested assistance after a network  compromise caused a full outage. Preliminary forensic analysis shows the attack originated from a single user account, indicating a potential insider threat. Investigate the incident to identify the insider and determine the actions taken during the attack. You have been given the compromised user's github profile - https://github.com/EMarseille99 What is the well known RAT tool that the inisder forked?", 
 "points": 75, 
