--- a/challenges/umuthan-challenge/ctfs/challenge-3/config.json
+++ b/challenges/umuthan-challenge/ctfs/challenge-3/config.json
@@ -1,5 +1,5 @@
 {
-  "id": "cookie-03",
+  "id": "challenge-3",
   "title": "The Cookie Monster",
   "description": "To access the secret area, you need to be an 'admin'. However, the system thinks you are just a 'guest'. Check your browser cookies!",
   "points": 100,
