--- a/challenges/umuthan-challenge/ctfs/challenge-6/config.json
+++ b/challenges/umuthan-challenge/ctfs/challenge-6/config.json
@@ -1,5 +1,5 @@
 {
-  "id": "localstorage-06",
+  "id": "challenge-6",
   "title": "Forgotten Memory",
   "description": "Websites don't just use cookies; they also use 'Local Storage' to remember things. Check if anything was left behind there.",
   "points": 100,
