--- a/challenges/umuthan-challenge/ctfs/challenge-7/config.json
+++ b/challenges/umuthan-challenge/ctfs/challenge-7/config.json
@@ -1,5 +1,5 @@
 {
-  "id": "disabled-07",
+  "id": "challenge-7",
   "title": "The Unclickable Button",
   "description": "There is a 'Claim Flag' button, but it's grayed out and unclickable. Can you  find a way to activate it?",
   "points": 80,
