--- a/challenges/umuthan-challenge/ctfs/challenge-8/config.json
+++ b/challenges/umuthan-challenge/ctfs/challenge-8/config.json
@@ -1,5 +1,5 @@
 {
-  "id": "network-08",
+  "id": "challenge-8",
   "title": "Hidden Requests",
   "description": "When the page loads, it fetches a secret file from an API. You can't see it on the page, but you can see it in the network traffic.",
   "points": 150,
