--- a/challenges/umuthan-challenge/ctfs/challenge-10/config.json
+++ b/challenges/umuthan-challenge/ctfs/challenge-10/config.json
@@ -1,5 +1,5 @@
 {
-  "id": "final-10",
+  "id": "challenge-10",
   "title": "The Grand Finale",
   "description": "This string has been through three layers of protection: It was converted to Hex, then Rot13, then Reversed. Can you undo it?",
   "points": 250,
