--- a/challenges/Viktor-challenge/config.json
+++ b/challenges/Viktor-challenge/config.json
@@ -1,6 +1,6 @@
 {
   "id": "Viktor-challenge",
-  "name": "Viktor Challenge",
-  "description": "Test your skills in decoding and encrypting messages! Learn about different cipher techniques and see if you can crack the codes."
+  "name": "Web Basics Challenge 2",
+  "description": "Test your skills by exploiting common web vulnerabilities like authentication bypass, parameter tampering, and hidden endpoints."
 }
 
