--- a/challenges/umuthan-challenge/config.json
+++ b/challenges/umuthan-challenge/config.json
@@ -1,6 +1,6 @@
 {
   "id": "umuthan-challenge",
-  "name": "Umuthan Challenge",
-  "description": "Think like a hacker by solving puzzles, decoding hidden messages, and breaking layers of encryption to capture each flag."
+  "name": "Advanced Web Challenges",
+  "description": "Push your limits by chaining complex web vulnerabilities, bypassing modern defenses, and exploiting advanced logic flaws in this Advanced Web Challenges series."
 }
 
