--- a/challenges/shawn-challenge/config.json
+++ b/challenges/shawn-challenge/config.json
@@ -1,6 +1,6 @@
 {
   "id": "shawn-challenge",
   "name": "Forensics Challenge",
-  "description": "Analyze hidden clues in files, metadata, and network traces to uncover the truth in this hands-on Forensics challenge."
+  "description": "Analyse hidden clues in files, metadata, and network traces to uncover the truth in this hands-on Forensics challenge."
 }
 
