--- a/challenges/cryptography-challenge/config.json
+++ b/challenges/cryptography-challenge/config.json
@@ -1,5 +1,5 @@
 {
-  "id": "Acryptography-challenge",
+  "id": "cryptography-challenge",
   "name": "Morning 1",
   "description": "Test your skills in decoding and encrypting messages! Learn about different cipher techniques and see if you can crack the codes."
 }
