--- a/challenges/daniel-challenge/config.json
+++ b/challenges/daniel-challenge/config.json
@@ -1,6 +1,6 @@
 {
   "id": "daniel-challenge",
-  "name": "CyberChef 101 Challenges",
+  "name": "CyberChef 101 Challenges (Easy)",
   "description": "The system is locked down. Break through layers of encryption, decode hidden messages, and capture the flags before time runs out."
 }
 
