--- a/challenges/umuthan-challenge/config.json
+++ b/challenges/umuthan-challenge/config.json
@@ -1,6 +1,6 @@
 {
   "id": "umuthan-challenge",
-  "name": "Advanced Web Challenges",
+  "name": "Web Challenges (Technical)",
   "description": "Push your limits by chaining complex web vulnerabilities, bypassing modern defenses, and exploiting advanced logic flaws in this Advanced Web Challenges series."
 }
 
