--- a/challenges/Viktor-challenge/config.json
+++ b/challenges/Viktor-challenge/config.json
@@ -1,6 +1,6 @@
 {
   "id": "Viktor-challenge",
-  "name": "Web Basics Challenge 2",
+  "name": "Web Basics Challenge 2 (Medium)",
   "description": "Test your skills by exploiting common web vulnerabilities like authentication bypass, parameter tampering, and hidden endpoints."
 }
 
