--- a/challenges/umuthan-challenge/ctfs/challenge-3/config.json
+++ b/challenges/umuthan-challenge/ctfs/challenge-3/config.json
@@ -3,7 +3,7 @@
   "title": "The Cookie Monster",
   "description": "To access the secret area, you need to be an 'admin'. However, the system thinks you are just a 'guest'. Check your browser cookies!",
   "points": 100,
-  "links": ["index.html"],
+  "links": ["https://school-ctf-production-9947.up.railway.app/api/challenges/umuthan-challenge/ctfs/challenge-3"],
   "hints": [
     "Go to Application > Cookies.",
     "Try changing the value of 'user_role' from 'guest' to 'admin'."
